navbar gap issue resolved

--- a/blog.html
+++ b/blog.html
@@ -52,8 +52,7 @@
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="index.html#set1">About us</a></li>
                                         <li><a href="index.html#set2">Features</a></li>
-                                        <li><a href="blog.html">blog</li>
-                                        <li><a href="contact.html">Contact us</a></li>
+                                        <li><a href="blog.html">blog</li><li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </nav>
                             </div>
