--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="#set1">About us</a></li>
                                         <li><a href="#set2">Features</a></li>
-                                        <li><a href="blog.html">blog</li>
-                                        <li><a href="contact.html">Contact us</a></li>
+                                        <li><a href="blog.html">blog</li><li><a href="contact.html">Contact us</a></li>
                                     </ul>
                                 </nav>
                             </div>
