joshys text correction

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-xl-7 col-md-6">
                         <div class="slider_text ">
                             <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Hyper Local Selling & Buying Platform</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">It's a community based social media where you can find a 
+                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">It's a community based selling and buying platform where you can find a 
                             market for your local produces and services. Get connected with your Neighbourhood</p>
                             <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
                                 <a href="#set1" class="boxed-btn3">Know more</a>
@@ -479,7 +479,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-7 col-md-12 col-lg-6">
-                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Make your panchayath strong<br>
+                    <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s">Make your village strong<br>
                             and self-sufficient. Download Jansree Now!</h3>
                 </div>
                 <div class="col-xl-5 col-md-12 col-lg-6">
