Changed landing page heading

--- a/index.html
+++ b/index.html
@@ -80,23 +80,26 @@
     <div class="slider_area">
         <div class="single_slider  d-flex align-items-center slider_bg_1">
             <div class="container">
+
                 <div class="row align-items-center">
-                    <div class="col-xl-7 col-md-6">
-                        <div class="slider_text ">
-                            <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Hyper Local Selling & Buying Platform</h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">It's a community based selling and buying platform where you can find a 
-                            market for your local produces and services. Get connected with your Neighbourhood</p>
-                            <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                <a href="#set1" class="boxed-btn3">Know more</a>
+                        <div class="col-xl-7 col-md-6">
+                            <div class="slider_text ">
+                                <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Community based online marketplace.</h3>
+                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">It's a community based selling and buying platform where you can find a 
+                                market for your local produces and services. Get connected with your Neighbourhood</p>
+                                <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
+                                    <a href="#set1" class="boxed-btn3">Know more</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-5 col-md-6">
-                        <div class="phone_thumb wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".2s">
-                            <img src="img/ilstrator/screen6.png" alt="">
+
+                        <div class="col-xl-5 col-md-6">
+                            <div class="phone_thumb wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".2s">
+                                <img src="img/ilstrator/screen6.png" alt="">
+                            </div>
                         </div>
-                    </div>
                 </div>
+
             </div>
         </div>
     </div>
@@ -131,18 +134,18 @@
                                 <img src="img/icon/img2.svg" class="img-responsive" style="max-width: 120px; margin-bottom: 30px;" alt="">
                                 <h4>Find or sell locally produced<br> 
                                     vegetables & goods at your finger tips.</h4>
-                            </div>
+                        </div>
                 </div>
                 <div class="col-lg-4 col-md-4">
 
-                            <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
-                                <!-- <div class="thumb">
-                                        <img src="img/icon/img3.svg" alt="">
-                                </div> -->
-                                <img src="img/icon/img3.svg" class="img-responsive" style="max-width: 120px; margin-bottom: 30px;" alt="">
-                                <h4>Get updates related to schemes and policies<br>
-                                    from your local authorities.</h5>
-                            </div>
+                    <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
+                        <!-- <div class="thumb">
+                                <img src="img/icon/img3.svg" alt="">
+                        </div> -->
+                        <img src="img/icon/img3.svg" class="img-responsive" style="max-width: 120px; margin-bottom: 30px;" alt="">
+                        <h4>Get updates related to schemes and policies<br>
+                            from your local authorities.</h5>
+                    </div>
                 </div>
             </div>
             <div class="row mt-5">
