--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="col-xl-7 col-md-6">
                             <div class="slider_text ">
                                 <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Community based online marketplace.</h3>
-                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">It's a community based selling and buying platform where you can find a 
+                                <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Jansree is a community based selling and buying platform where you can find a 
                                 market for your local produces and services. Get connected with your Neighbourhood</p>
                                 <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
                                     <a href="#set1" class="boxed-btn3">Know more</a>
